projects/vb6parse/snapshots/parsers/cst/type_statements/type_keyword_as_field_name.snap
---
source: projects/vb6parse/src/parsers/cst/type_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: TypeStatement
      children:
        - kind: TypeKeyword
          text: Type
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: KeywordFields
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: NameKeyword
              text: Name
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: StringKeyword
              text: String
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: TypeKeyword
              text: Type
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: IntegerKeyword
              text: Integer
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: EndKeyword
              text: End
            - kind: Whitespace
              text: " "
            - kind: AsKeyword
              text: As
            - kind: Whitespace
              text: " "
            - kind: LongKeyword
              text: Long
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: TypeKeyword
          text: Type
        - kind: Newline
          text: "\n"
